--- a/.config
+++ b/.config
@@ -2,6 +2,8 @@
 # Automatically generated file; DO NOT EDIT.
 # ImmortalWrt Configuration
 #
+CONFIG_USE_APK=n
+CONFIG_PACKAGE_opkg=y
 CONFIG_MODULES=y
 CONFIG_HAVE_DOT_CONFIG=y
 CONFIG_HOST_OS_LINUX=y
